<resources>
    <string name="app_name">Donaton</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_confirm">Confirme su Contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_lastname">Apellido</string>
    <string name="hint_email">Correo</string>

    <string name="button_sing_in">Iniciar Sesión</string>
    <string name="button_register">Registrar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_donar">Donar</string>
    <string name="button_albergues">Alvergues</string>
    <string name="button_profile">Perfil</string>
    <string name="logo_description">Logo</string>
</resources>
