<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher" />

        <ScrollView
            android:id="@+id/Container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnDonar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_donar" />

                <Button
                    android:id="@+id/btnAlbergues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goAlvergues"
                    android:text="@string/button_albergues" />

                <Button
                    android:id="@+id/btnProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_profile" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>