<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_all">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PERFIL"
            android:layout_marginTop="@dimen/margin_all"
            android:textSize="25dp"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                style="@style/EditTextBlack"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastname"
                style="@style/EditTextBlack"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                style="@style/EditTextBlack"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ususario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user"
                style="@style/EditTextBlack"/>
        </android.support.design.widget.TextInputLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

       <Button
           android:id="@+id/btnGuardar"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:textSize="20dp"
           android:textColor="@color/editTextColorWhite"
           android:background="@color/colorPrimary"
           android:layout_margin="@dimen/margin_all"
           android:text="Guardar"
           android:onClick="update"/>

       <Button
           android:id="@+id/btnCancel"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:textSize="20dp"
           android:textColor="@color/editTextColorWhite"
           android:background="@color/colorPrimary"
           android:layout_margin="@dimen/margin_all"
           android:text="@string/button_cancel"
           android:onClick="close"/>

   </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>