<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_all">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/logo"
            android:layout_margin="@dimen/margin_all"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_all"
            android:focusedByDefault="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUser"
                style="@style/EditTextBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_all">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                style="@style/EditTextBlack"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_singin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="signIn"
            android:text="@string/button_sing_in"
            android:background="@color/colorAccent"
            android:textColor="@color/editTextColorWhite"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_all"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:text="Registrarse"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/textsize_general" />
        </LinearLayout>
    </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>